--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -11,9 +11,26 @@
 @font-face {
   font-style: normal;
   font-weight: 400;
-  font-family: "";
-
+  font-family: "Roboto Condensed";
   font-display: swap;
-  src:
-    url("../fonts/.woff2") format("woff2");
+  src: url("../fonts/roboto-condensed.woff") format("woff");
+  src: url("../fonts/roboto-condensed.woff2") format("woff2");
+}
+
+@font-face {
+  font-style: normal;
+  font-weight: 400;
+  font-family: "PT Mono";
+  font-display: swap;
+  src: url("../fonts/pt-mono.woff") format("woff");
+  src: url("../fonts/pt-mono.woff2") format("woff2");
+}
+
+@font-face {
+  font-style: normal;
+  font-weight: 400;
+  font-family: "Roboto";
+  font-display: swap;
+  src: url("../fonts/roboto.woff") format("woff");
+  src: url("../fonts/roboto.woff2") format("woff2");
 }
