header styles & layout

--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -6,6 +6,10 @@
 $color-default-black:               #000000;
 $color-default-white:               #ffffff;
 $color-transparent:                 rgba(255, 255, 255, 0);
+$base-black-font: #041827;
+$base-white-font: #F2F5F6;
+$clipped-white: rgba(255, 255, 255, 0.7);
+
 
 // Project palette
 // для нейминга цветов используем https://www.htmlcsscolor.com/hex/334482
