--- a/source/sass/global/reboot.scss
+++ b/source/sass/global/reboot.scss
@@ -2,6 +2,11 @@
 *::before,
 *::after {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  border: none;
+  outline: none;
 }
 
 html,
@@ -9,6 +14,8 @@ body {
   margin: 0;
   padding: 0;
   min-height: 100vh;
+  font-family: "PT Mono", "Monaco", "monospace";
+  color: $base-black-font;
 }
 
 html {
