main-description block layout & adaptive

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -20,6 +20,8 @@
 
 @import "./blocks/logo-block.scss";
 @import "./blocks/header.scss";
+@import "./blocks/main-description.scss";
+@import "./blocks/main.scss";
 
 // ---------------------------------
 
