--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -9,6 +9,7 @@ $color-transparent:                 rgba(255, 255, 255, 0);
 $base-black-font: #041827;
 $base-white-font: #F2F5F6;
 $clipped-white: rgba(255, 255, 255, 0.7);
+$base-blue: #00B2FF;
 
 
 // Project palette
