--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,9 +1,16 @@
 .header {
+  position: absolute;
+  top: 0;
+  width: 100%;
   background: linear-gradient(180deg, #041827 84.9%, rgba(4, 24, 39, 0) 100%);
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
+
+  @media (min-width: $vp-1024) {
+    position: fixed;
+  }
 }
 
 .header__logo-block {
