benefits-block layout & hover

--- a/source/sass/blocks/main-description.scss
+++ b/source/sass/blocks/main-description.scss
@@ -21,7 +21,7 @@
 .main-description__title {
   margin: 0;
   margin-bottom: 20px;
-  font-family: "Roboto Condensed", "Arial", "sans-serif";
+  font-family: "Roboto Condensed", "Arial", sans-serif;
   font-size: 36px;
   line-height: 42px;
   font-weight: 700;
@@ -58,7 +58,7 @@
   width: 270px;
   background-color: $base-blue;
   color: $base-white-font;
-  font-family: "Roboto Condensed", "Arial", "sans-serif";
+  font-family: "Roboto Condensed", "Arial", sans-serif;
   font-weight: 700;
   font-size: 14px;
   line-height: 16px;
