--- a/source/sass/global/reboot.scss
+++ b/source/sass/global/reboot.scss
@@ -14,7 +14,7 @@ body {
   margin: 0;
   padding: 0;
   min-height: 100vh;
-  font-family: "PT Mono", "Monaco", "monospace";
+  font-family: "PT Mono", "Monaco", monospace;
   color: $base-black-font;
 }
 
