--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -22,6 +22,8 @@
 @import "./blocks/header.scss";
 @import "./blocks/main-description.scss";
 @import "./blocks/main.scss";
+@import "./blocks/benefits-block.scss";
+@import "./blocks/benefit-item.scss";
 
 // ---------------------------------
 
