--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -7,6 +7,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
+  z-index: 10;
 
   @media (min-width: $vp-1024) {
     position: fixed;
