about company block

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -24,6 +24,7 @@
 @import "./blocks/main.scss";
 @import "./blocks/benefits-block.scss";
 @import "./blocks/benefit-item.scss";
+@import "./blocks/about-company.scss";
 
 // ---------------------------------
 
