--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -25,6 +25,8 @@
 @import "./blocks/benefits-block.scss";
 @import "./blocks/benefit-item.scss";
 @import "./blocks/about-company.scss";
+@import "./blocks/products.scss";
+@import "./blocks/product-card.scss";
 
 // ---------------------------------
 
