feedback-form block layout

--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -11,6 +11,7 @@ $base-white-font: #F2F5F6;
 $clipped-white: rgba(255, 255, 255, 0.7);
 $light-grey: #EBEBEB;
 $base-blue: #00B2FF;
+$blue-input-background: rgba(4, 20, 39, 0.15);
 
 
 // Project palette
