--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -27,6 +27,7 @@
 @import "./blocks/about-company.scss";
 @import "./blocks/products.scss";
 @import "./blocks/product-card.scss";
+@import "./blocks/feedback-form.scss";
 
 // ---------------------------------
 
