--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -28,6 +28,11 @@
 @import "./blocks/products.scss";
 @import "./blocks/product-card.scss";
 @import "./blocks/feedback-form.scss";
+@import "./blocks/footer.scss";
+@import "./blocks/nav-section.scss";
+@import "./blocks/contacts-section.scss";
+@import "./blocks/socials-section.scss";
+@import "./blocks/social-links.scss";
 
 // ---------------------------------
 
