--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -33,6 +33,7 @@
 @import "./blocks/contacts-section.scss";
 @import "./blocks/socials-section.scss";
 @import "./blocks/social-links.scss";
+@import "./blocks/popup.scss";
 
 // ---------------------------------
 
