--- a/source/sass/blocks/feedback-form.scss
+++ b/source/sass/blocks/feedback-form.scss
@@ -19,6 +19,14 @@
     background-repeat: no-repeat;
     background-size: 50% 100%;
   }
+
+  &--popup {
+    @media (min-width: 1024px) {
+      background-image: none;
+      padding: 0;
+      margin: 0;
+    }
+  }
 }
 
 .feedback-form__inputs-wrapper {
@@ -71,6 +79,10 @@
 
   @media (min-width: 768px) {
     margin-bottom: 35px;
+
+    &--popup {
+      margin-bottom: 25px;
+    }
   }
 }
 
@@ -141,6 +153,10 @@
   @media (min-width: 768px) {
     margin: 0;
     min-width: 265px;
+
+    &--popup {
+      margin-bottom: 20px;
+    }
   }
 }
 
