js popup, button-more, form-scroll, accordions, phone-mask

--- a/source/sass/blocks/about-company.scss
+++ b/source/sass/blocks/about-company.scss
@@ -62,6 +62,15 @@
   }
 }
 
+.about-company__more-description {
+  display: none;
+
+  &--is-open {
+    display: block;
+    margin-bottom: 20px;
+  }
+}
+
 .about-company__image {
   display: none;
 
