--- a/source/sass/blocks/popup.scss
+++ b/source/sass/blocks/popup.scss
@@ -1,4 +1,5 @@
 .popup {
+  display: none;
   width: 100vw;
   height: 100vh;
   position: fixed;
@@ -6,9 +7,12 @@
   left: 0;
   background-color: rgba(3, 16, 27, 0.7);
   z-index: 11;
-  display: flex;
   justify-content: center;
   align-items: center;
+
+  &--is-open {
+    display: flex;
+  }
 }
 
 .popup__wrapper {
