fixed html validation

--- a/source/sass/blocks/feedback-form.scss
+++ b/source/sass/blocks/feedback-form.scss
@@ -202,6 +202,7 @@
   @media (min-width: 1024px) {
     position: absolute;
     display: block;
+    width: 26.5%;
     top: 246px;
     left: 10%;
   }
