renamed socials-section to socials-wrapper & changed tags

--- a/source/sass/blocks/socials-wrapper.scss
+++ b/source/sass/blocks/socials-wrapper.scss
@@ -1,4 +1,4 @@
-.socials-section {
+.socials-wrapper {
   padding: 35px 50px 25px 50px;
 
   @media (min-width: 768px) {
@@ -18,5 +18,4 @@
     width: max-content;
     margin-right: 8.3%;
   }
-
 }
