--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -31,7 +31,7 @@
 @import "./blocks/footer.scss";
 @import "./blocks/nav-section.scss";
 @import "./blocks/contacts-section.scss";
-@import "./blocks/socials-section.scss";
+@import "./blocks/socials-wrapper.scss";
 @import "./blocks/social-links.scss";
 @import "./blocks/popup.scss";
 
