--- a/source/sass/blocks/about-company.scss
+++ b/source/sass/blocks/about-company.scss
@@ -1,4 +1,5 @@
 .about-company {
+  display: flex;
   gap: 100px;
   padding: 0;
   width: 62.5%;
@@ -6,10 +7,10 @@
   margin-bottom: 100px;
 
   @media (max-width: 1023px) {
-    display: flex;
     gap: 30px;
     padding: 0 50px 80px 50px;
     width: 100%;
+    margin-bottom: 0;
   }
 
   @media (max-width: 767px) {
@@ -34,6 +35,7 @@
 
 .about-company__description {
   min-height: 170px;
+  margin-bottom: 20px;
 
   @media (max-width: 1023px) {
     font-size: 16px;
@@ -43,7 +45,6 @@
   @media (max-width: 767px) {
     font-size: 14px;
     line-height: 19px;
-    margin-bottom: 20px;
   }
 }
 
@@ -67,12 +68,18 @@
 
 .about-company__more-description {
   display: none;
+  font-size: 16px;
+  line-height: 21px;
+  margin-bottom: 20px;
 
-  &--is-open {
+  @media (max-width: 767px) {
     font-size: 14px;
     line-height: 19px;
-    display: block;
     margin-bottom: 20px;
+  }
+
+  &--is-open {
+    display: block;
   }
 }
 
@@ -89,18 +96,18 @@
 .about-company__button-more {
   width: 180px;
   padding: 14px;
+  font-family: "Roboto Condensed", "Arial", sans-serif;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  text-transform: uppercase;
+  background-color: inherit;
+  color: $base-blue;
+  border: 1px solid $base-blue;
+  border-radius: 3px;
 
   @media (max-width: 767px) {
     width: 160px;
-    font-family: "Roboto Condensed", "Arial", sans-serif;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 16px;
-    text-transform: uppercase;
-    background-color: inherit;
-    color: $base-blue;
     padding: 8px 15px;
-    border: 1px solid $base-blue;
-    border-radius: 3px;
   }
 }
