fixed svg & preload fonts

--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -9,7 +9,10 @@
   @media (min-width: 1024px) {
     padding: 50px 18.2% 55px 18.2%;
     display: flex;
+    display: none;
   }
+
+  display: none;
 }
 
 .footer__links-wrapper {
