--- a/source/sass/blocks/benefit-item.scss
+++ b/source/sass/blocks/benefit-item.scss
@@ -1,7 +1,11 @@
 .benefit-item {
+  grid-area: auto;
   position: relative;
   width: 100%;
-  padding: 30px 30px 35px 30px;
+  min-width: 332px;
+  min-height: 300px;
+  height: 100%;
+  padding: 40px 45px 35px 45px;
   border: 1px solid $light-grey;
 
   &::after {
@@ -19,30 +23,29 @@
     border-color: $base-blue;
     color: #fff;
 
+    & svg {
+      fill: #fff;
+    }
+
     & h2 {
       color: #fff
     }
   }
 
-  &:hover svg g {
-    fill: #fff;
-  }
-
-  @media (min-width: $vp-768) {
+  @media (max-width: 1023px) {
     min-width: 100%;
-    height: 100%;
-
-    padding: 40px 45px 35px 45px;
   }
 
-  @media (min-width: $vp-1024) {
-    min-height: 300px;
+  @media (max-width: 767px) {
+    padding: 30px 30px 35px 30px;
   }
 }
 
 .benefit-item__icon {
   width: 35px;
   height: 35px;
+  fill: $base-blue;
+  margin-bottom: 20px;
 
   @media (max-width: 767px) {
     width: 30px;
@@ -53,29 +56,24 @@
 .benefit-item__title {
   font-family: "Roboto Condensed", "Arial", sans-serif;
   font-weight: 400;
-  overflow-wrap: break-word;
   width: 100%;
+  font-size: 24px;
+  line-height: 34px;
   color: $base-blue;
-  font-size: 20px;
-  line-height: 28px;
   margin-bottom: 15px;
 
-  @media (min-width: $vp-768) {
-    font-size: 24px;
-    line-height: 34px;
+  @media (max-width: 767px) {
+    font-size: 20px;
+    line-height: 28px;
   }
 }
 
-.benefit-item__icon {
-  margin-bottom: 20px;
-}
-
 .benefit-item__description {
-  font-size: 14px;
-  line-height: 19px;
+  font-size: 16px;
+  line-height: 21px;
 
-  @media (min-width: $vp-768) {
-    font-size: 16px;
-    line-height: 21px;
+  @media (max-width: 767px) {
+    font-size: 14px;
+    line-height: 19px;
   }
 }
