--- a/source/sass/blocks/benefits-block.scss
+++ b/source/sass/blocks/benefits-block.scss
@@ -1,36 +1,38 @@
 .benefits-block {
   width: 100%;
-  padding: 50px 25px;
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 120px 0;
 
-  @media (min-width: $vp-768) {
+  @media (max-width: 1023px) {
     padding: 80px 50px;
   }
 
-  @media (min-width: $vp-1024) {
-    padding: 120px 0;
+  @media (max-width: 768px) {
+    padding: 50px 25px;
   }
 }
 
 .benefits-block__list {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  max-width: 62.5%;
+  display: grid;
+  margin: 0 auto;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
   gap: 30px;
-  justify-content: space-between;
 
-  @media (min-width: $vp-768) {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    gap: 30px;
+  @media (max-width: 1023px) {
+    width: 100%;
+    max-width: fit-content;
+    margin: 0;
   }
 
-  @media (min-width: $vp-1024) {
-    max-width: 62.5%;
-    margin: 0 auto;
+  @media (max-width: 767px) {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
   }
 }
