--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,7 +1,7 @@
 .header {
   position: absolute;
   top: 0;
-  width: 100%;
+  width: 100vw;
   background: linear-gradient(180deg, #041827 84.9%, rgba(4, 24, 39, 0) 100%);
   display: flex;
   flex-direction: row;
