--- a/source/sass/blocks/product-card.scss
+++ b/source/sass/blocks/product-card.scss
@@ -6,20 +6,19 @@
   background-position: center;
   background-size: cover;
 
-
   &--1 {
-    background-image: url("../../img/card-1.jpg");
+    background-image: url("../../img/card-1-desktop.jpg");
   }
 
   &--2 {
-    background-image: url("../../img/card-2.jpg");
+    background-image: url("../../img/card-2-desktop.jpg");
   }
 
   &--3 {
-    background-image: url("../../img/card-3.jpg");
+    background-image: url("../../img/card-3-desktop.jpg");
   }
 
-  @media (min-width: 768px) {
+  @media (max-width: 1023px) {
     &--1 {
       background-image: url("../../img/card-1-tablet.jpg");
     }
@@ -33,17 +32,17 @@
     }
   }
 
-  @media (min-width: 1024px) {
+  @media (max-width: 767px) {
     &--1 {
-      background-image: url("../../img/card-1-desktop.jpg");
+      background-image: url("../../img/card-1.jpg");
     }
   
     &--2 {
-      background-image: url("../../img/card-2-desktop.jpg");
+      background-image: url("../../img/card-2.jpg");
     }
   
     &--3 {
-      background-image: url("../../img/card-3-desktop.jpg");
+      background-image: url("../../img/card-3.jpg");
     }
   }
 }
@@ -52,51 +51,45 @@
   position: relative;
   display: block;
   width: 100%;
-  height: 100%;
-  padding: 30px 90px 160px 30px;
+  padding: 50px 22.8% 545px 11.4%;
+  height: 650px;
 
-  @media (min-width: 768px) {
+  @media (max-width: 1023px) {
     padding: 40px 395px 155px 45px;
+    height: 100%;
   }
 
-  @media (min-width: 1024px) {
-    padding: 50px 22.8% 545px 11.4%;
-    height: 650px;
+  @media (max-width: 767px) {
+    padding: 30px 90px 160px 30px;
   }
 }
 
 .product-card__button {
+  width: 60px;
+  height: 60px;
   position: absolute;
-  width: 40px;
-  height: 40px;
   background-color: $base-blue;
   bottom: 0;
   right: 0;
   border-top-left-radius: 3px;
 
-  @media (min-width: 768px) {
-    width: 60px;
-    height: 60px;
+  @media (max-width: 767px) {
+    width: 40px;
+    height: 40px;
   }
 }
 
 .product-card__chevron {
   position: absolute;
-  top: 17.5px;
-  left: 20px;
+  display: block;
+  top: 26.5px;
+  left: 30px;
 
-  @media (min-width: 768px) {
-    display: none;
-  }
-
-  &--tablet {
-    display: none;
-
-    @media (min-width: 768px) {
-      display: block;
-      top: 26.5px;
-      left: 30px;
-    }
+  @media (max-width: 767px) {
+    top: 17.5px;
+    left: 20px;
+    width: 3px;
+    height: 5px;
   }
 }
 
@@ -105,15 +98,15 @@
   font-family: "Roboto Condensed", "Arial", sans-serif;
   font-weight: 400;
   color: $color-default-white;
-  font-size: 18px;
-  line-height: 30px;
+  width: 100%;
 
-  @media (min-width: 768px) {
+  @media (max-width: 1023px) {
     font-size: 20px;
     width: 165px;
   }
 
-  @media (min-width: 1024px) {
-    width: 100%;
+  @media (max-width: 767px) {
+    font-size: 18px;
+    line-height: 30px;
   }
 }
