--- a/source/sass/blocks/main-description.scss
+++ b/source/sass/blocks/main-description.scss
@@ -7,75 +7,75 @@
   padding: 305px 37.8% 280px 24.7%;
   background-position: center;
 
+  h1 {
+    margin: 0;
+    margin-bottom: 20px;
+    font-family: "Roboto Condensed", "Arial", sans-serif;
+    font-weight: 700;
+    color: $base-white-font;
+    text-transform: uppercase;
+    letter-spacing: 0.07em;
+    width: 800px;
+    font-size: 80px;
+    line-height: 94px;
+  }
+
+  p {
+    font-size: 22px;
+    line-height: 34px;
+    margin-bottom: 50px;
+    color: $base-white-font;
+  }
+
+  button {
+    padding: 15px 0;
+    width: 420px;
+    background-color: $base-blue;
+    color: $base-white-font;
+    font-family: "Roboto Condensed", "Arial", sans-serif;
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 21px;
+  }
+
   @media (max-width: 1023px) {
     padding: 180px 50px 205px 50px;
     background-position: -173px;
+
+    h1 {
+      font-size: 64px;
+      line-height: 75px;
+      width: auto;
+    }
+
+    button {
+      margin-left: 45px;
+    }
   }
 
   @media (max-width: 767px) {
     background-position: -254px;
     padding: 150px 25px 190px 25px;
-  }
-}
 
-.main-description__title {
-  margin: 0;
-  margin-bottom: 20px;
-  font-family: "Roboto Condensed", "Arial", sans-serif;
-  font-weight: 700;
-  color: $base-white-font;
-  text-transform: uppercase;
-  letter-spacing: 0.07em;
-  width: 800px;
-  font-size: 80px;
-  line-height: 94px;
+    h1 {
+      font-size: 36px;
+      line-height: 42px;
+      width: auto;
+    }
 
-  @media (max-width: 1023px) {
-    font-size: 64px;
-    line-height: 75px;
-    width: auto;
-  }
+    p {
+      font-size: 14px;
+      line-height: 22px;
+    }
 
-  @media (max-width: 767px) {
-    font-size: 36px;
-    line-height: 42px;
-    width: auto;
-  }
-}
-
-.main-description__description {
-  font-size: 22px;
-  line-height: 34px;
-  margin-bottom: 50px;
-  color: $base-white-font;
-
-  @media (max-width: 767px) {
-    font-size: 14px;
-    line-height: 22px;
-  }
-}
-
-.main-description__button {
-  padding: 15px 0;
-  width: 420px;
-  background-color: $base-blue;
-  color: $base-white-font;
-  font-family: "Roboto Condensed", "Arial", sans-serif;
-  text-transform: uppercase;
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 21px;
-
-  @media (max-width: 1023px) {
-    margin-left: 45px;
-  }
-
-  @media (max-width: 767px) {
-    padding: 10px 0;
-    width: 270px;
-    border-radius: 3px;
-    margin-left: 0;
-    font-size: 14px;
-    line-height: 16px;
+    button {
+      padding: 10px 0;
+      width: 270px;
+      border-radius: 3px;
+      margin-left: 0;
+      font-size: 14px;
+      line-height: 16px;
+    }
   }
 }
