--- a/source/sass/blocks/benefit-item.scss
+++ b/source/sass/blocks/benefit-item.scss
@@ -8,6 +8,21 @@
   padding: 40px 45px 35px 45px;
   border: 1px solid $light-grey;
 
+  h2 {
+    font-family: "Roboto Condensed", "Arial", sans-serif;
+    font-weight: 400;
+    width: 100%;
+    font-size: 24px;
+    line-height: 34px;
+    color: $base-blue;
+    margin-bottom: 15px;
+  }
+
+  p {
+    font-size: 16px;
+    line-height: 21px;
+  }
+
   &::after {
     content: '';
     position: absolute;
@@ -38,6 +53,16 @@
 
   @media (max-width: 767px) {
     padding: 30px 30px 35px 30px;
+
+    h2 {
+      font-size: 20px;
+      line-height: 28px;
+    }
+
+    p {
+      font-size: 14px;
+      line-height: 19px;
+    }
   }
 }
 
@@ -50,30 +75,5 @@
   @media (max-width: 767px) {
     width: 30px;
     height: 30px;
-  }
-}
-
-.benefit-item__title {
-  font-family: "Roboto Condensed", "Arial", sans-serif;
-  font-weight: 400;
-  width: 100%;
-  font-size: 24px;
-  line-height: 34px;
-  color: $base-blue;
-  margin-bottom: 15px;
-
-  @media (max-width: 767px) {
-    font-size: 20px;
-    line-height: 28px;
-  }
-}
-
-.benefit-item__description {
-  font-size: 16px;
-  line-height: 21px;
-
-  @media (max-width: 767px) {
-    font-size: 14px;
-    line-height: 19px;
   }
 }
