--- a/source/sass/blocks/popup.scss
+++ b/source/sass/blocks/popup.scss
@@ -10,6 +10,36 @@
   justify-content: center;
   align-items: center;
 
+  h2 {
+    font-size: 36px;
+    line-height: 51px;
+    margin-bottom: 10px;
+    font-family: "Roboto Condensed", "Arial", sans-serif;
+    font-weight: 400;
+    color: $color-default-white;
+    margin-bottom: 20px;
+  }
+
+  p {
+    font-size: 16px;
+    line-height: 21px;
+    margin-bottom: 25px;
+    color: $color-default-white;
+  }
+
+  .feedback-form__checkbox-wrapper {
+    grid-area: 4/1/4/-1;
+  }
+
+  form > button {
+    grid-area: 3/1/3/-1;
+    width: 100%;
+  }
+
+  .feedback-form__question-wrapper {
+    margin-bottom: 0;
+  }
+
   &--is-open {
     display: flex;
   }
