--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -27,13 +27,14 @@
 @import "./blocks/about-company.scss";
 @import "./blocks/products.scss";
 @import "./blocks/product-card.scss";
-@import "./blocks/feedback-form.scss";
+@import "./blocks/feedback-form-section.scss";
 @import "./blocks/footer.scss";
 @import "./blocks/nav-section.scss";
 @import "./blocks/contacts-section.scss";
 @import "./blocks/socials-wrapper.scss";
 @import "./blocks/social-links.scss";
 @import "./blocks/popup.scss";
+@import "./blocks/feedback-form.scss";
 
 // ---------------------------------
 
