--- a/source/sass/blocks/feedback-form.scss
+++ b/source/sass/blocks/feedback-form.scss
@@ -54,6 +54,11 @@
     align-self: flex-start;
   }
 
+  @media (max-width: 1023px) {
+    grid-template-columns: 1fr 1fr;
+    margin: 0 auto;
+  }
+
   @media (max-width: 767px) {
     display: flex;
     flex-direction: column;
