--- a/source/sass/blocks/logo-block.scss
+++ b/source/sass/blocks/logo-block.scss
@@ -3,13 +3,7 @@
   padding-bottom: 20px;
 
   @media (min-width: $vp-1024) {
-    padding-top: 30px;
-    padding-bottom: 35px;
-  }
-
-  @media (min-width: $vp-768) {
-    padding-top: 20px;
-    padding-bottom: 25px;
+    width: 215px;
   }
 }
 
