--- a/source/sass/blocks/main-description.scss
+++ b/source/sass/blocks/main-description.scss
@@ -1,10 +1,12 @@
 .main-description {
   width: 100%;
+  height: 880px;
   background-color: #000;
   background-image: url('../../img/main-block-background.jpg');
   background-repeat: no-repeat;
   background-size: cover;
-  padding: 305px 37.8% 280px 24.7%;
+  padding-top: 305px;
+  padding-bottom: 280px;
   background-position: center;
 
   h1 {
@@ -42,6 +44,7 @@
   @media (max-width: 1023px) {
     padding: 180px 50px 205px 50px;
     background-position: -173px;
+    height: auto;
 
     h1 {
       font-size: 64px;
@@ -77,5 +80,18 @@
       font-size: 14px;
       line-height: 16px;
     }
+  }
+}
+
+.main-description__wrapper {
+  width: 770px;
+  margin-left: 24.7%;
+
+  @media (max-width: 1400px) {
+    margin-left: 12.3%;
+  }
+
+  @media (max-width: 1023px) {
+    margin-left: 0;
   }
 }
