--- a/source/sass/blocks/product-card.scss
+++ b/source/sass/blocks/product-card.scss
@@ -94,7 +94,7 @@
 }
 
 
-.product-card__title {
+.product-card h3 {
   font-family: "Roboto Condensed", "Arial", sans-serif;
   font-weight: 400;
   color: $color-default-white;
