--- a/source/sass/blocks/benefit-item.scss
+++ b/source/sass/blocks/benefit-item.scss
@@ -12,7 +12,7 @@
     font-family: "Roboto Condensed", "Arial", sans-serif;
     font-weight: 400;
     width: 100%;
-    font-size: 24px;
+    font-size: 22px;
     line-height: 34px;
     color: $base-blue;
     margin-bottom: 15px;
@@ -49,14 +49,17 @@
 
   @media (max-width: 1023px) {
     min-width: 100%;
+    max-height: 360px;
   }
 
   @media (max-width: 767px) {
-    padding: 30px 30px 35px 30px;
+    padding: 30px 30px 65px 30px;
+    min-height: 325px;
 
     h2 {
       font-size: 20px;
       line-height: 28px;
+      margin-bottom: 10px;
     }
 
     p {
@@ -70,10 +73,13 @@
   width: 35px;
   height: 35px;
   fill: $base-blue;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
+
+
 
   @media (max-width: 767px) {
     width: 30px;
     height: 30px;
+    margin-bottom: 10px;
   }
 }
