--- a/source/sass/blocks/contacts-section.scss
+++ b/source/sass/blocks/contacts-section.scss
@@ -67,10 +67,6 @@
   text-transform: uppercase;
 }
 
-.contacts-section__item:first-child {
-  margin-bottom: 5px;
-}
-
 .contacts-section__link {
   font-weight: 400;
   color: $clipped-white;
@@ -89,6 +85,10 @@
   flex-direction: column;
   justify-content: space-between;
   gap: 10px;
+
+  @media (max-width: 1023px) {
+    gap: 5px;
+  }
 
   @media (max-width: 767px) {
     display: none;
