--- a/source/sass/blocks/feedback-form.scss
+++ b/source/sass/blocks/feedback-form.scss
@@ -91,8 +91,12 @@
   grid-area: 2/1/2/-1;
   margin-bottom: 15px;
 
+  @media (max-width: 1023px) {
+    margin-bottom: 0;
+  }
+
   @media (max-width: 767px) {
-    margin-bottom: 10px;
+    margin-bottom: 2px;
   }
 }
 
