--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -3,8 +3,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-top: 50px;
+  padding-top: 55px;
   padding-bottom: 55px;
+
+  @media (max-width: 1023px) {
+    padding: 60px 50px 65px 50px;
+  }
 
   @media (max-width: 767px) {
     padding: 0;
@@ -25,6 +29,7 @@
 
   @media (max-width: 1023px) {
     flex-direction: column;
+    width: 100%;
   }
 
   @media (max-width: 767px) {
@@ -40,6 +45,7 @@
 
   @media (max-width: 1023px) {
     width: 100%;
+    gap: 120px;
   }
 
   @media (max-width: 767px) {
