--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -24,12 +24,16 @@
 
 .header__wrapper {
   width: 62.5%;
+  margin: 0 auto;
+  margin-right: 410px;
+  margin-left: 350px;
   display: flex;
   align-items: center;
   justify-content: space-between;
 
   @media (max-width: 1400px) {
     width: 80%;
+    margin: 0 auto;
   }
 
   @media (max-width: 1023px) {
@@ -39,6 +43,7 @@
 
 .header__logo-block {
   padding: 0;
+  margin-right: 60px;
 }
 
 .header__contacts-block {
@@ -47,7 +52,17 @@
   gap: 20px;
 
   @media (min-width: $vp-1024) {
-    gap: 30px;
+    gap: 50px;
+    width: 480px;
+    justify-content: space-between;
+  }
+
+  @media (max-width: 1023px) {
+    margin-bottom: 15px;
+  }
+
+  @media (max-width: 767px) {
+    margin-bottom: 0;
   }
 }
 
@@ -58,6 +73,8 @@
 
   @media (min-width: $vp-1024) {
     gap: 15px;
+    padding: 10px;
+    padding-bottom: 20px;
   }
 }
 
@@ -88,5 +105,6 @@
     border: 1px solid $base-white-font;
     padding: 10px 15px;
     border-radius: 3px;
+    margin-left: 70px;
   }
 }
