--- a/source/sass/blocks/contacts-section.scss
+++ b/source/sass/blocks/contacts-section.scss
@@ -72,6 +72,9 @@
   color: $clipped-white;
   font-size: 16px;
   line-height: 21px;
+  &:hover {
+    color: $base-blue;
+  }
 
   @media (max-width: 767px) {
     font-size: 14px;
