--- a/source/sass/blocks/feedback-form-section.scss
+++ b/source/sass/blocks/feedback-form-section.scss
@@ -3,7 +3,7 @@
   background-color: $base-blue;
   padding-top: 165px;
   padding-bottom: 245px;
-  background-image: url("../../img/bg-form.png");
+  background-image: url("../img/bg-form.png");
   background-repeat: no-repeat;
   background-size: 50% 100%;
   display: flex;
