--- a/source/sass/blocks/main-description.scss
+++ b/source/sass/blocks/main-description.scss
@@ -2,7 +2,7 @@
   width: 100%;
   height: 880px;
   background-color: #000;
-  background-image: url('../../img/main-block-background.jpg');
+  background-image: url('../img/main-block-background.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   padding-top: 305px;
@@ -30,6 +30,7 @@
   }
 
   button {
+    cursor: pointer;
     padding: 15px 0;
     width: 420px;
     background-color: $base-blue;
@@ -88,6 +89,11 @@
       line-height: 16px;
     }
   }
+}
+
+
+.main-description button:hover {
+  background-color: $base-black-font;
 }
 
 .main-description__wrapper {
