--- a/source/sass/blocks/nav-section.scss
+++ b/source/sass/blocks/nav-section.scss
@@ -23,6 +23,10 @@
   @media (max-width: 1023px) {
     margin-bottom: 20px;
   }
+
+  @media (max-width: 767px) {
+    margin-bottom: 0;
+  }
 }
 
 .nav-section__title {
@@ -77,6 +81,9 @@
   font-size: 16px;
   line-height: 21px;
   color: $clipped-white;
+  &:hover {
+    color: $base-blue;
+  }
 
   @media (max-width: 767px) {
     font-size: 14px;
