--- a/source/sass/blocks/socials-wrapper.scss
+++ b/source/sass/blocks/socials-wrapper.scss
@@ -1,4 +1,5 @@
 .socials-wrapper {
+  display: flex;
   flex-direction: column;
   margin-bottom: 0;
   justify-content: flex-start;
@@ -19,6 +20,7 @@
 
   @media (max-width: 767px) {
     flex-direction: column;
+    align-items: center;
     margin: 0;
     padding: 35px 50px 0 50px;
   }
